search and preloader overlapping fix

--- a/src/components/Preloader.scss
+++ b/src/components/Preloader.scss
@@ -3,7 +3,7 @@
   height: 100%;
   position: fixed;
   background: rgba(255, 255, 255, 0.8);
-  z-index: 100;
+  z-index: 999;
 }
 
 .sk-folding-cube {
